Make code robust against event being deleted.

Also fixes a uid() vs instanceIdentifier() issue.

These are the two only possible causes for the crash reported in:
BUG: 325009